--- a/FarmBayApp/app/src/main/res/layout/list_view.xml
+++ b/FarmBayApp/app/src/main/res/layout/list_view.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:orientation="horizontal" >
+    android:layout_height="match_parent" android:orientation="vertical" >
 
     <TextView
         android:id="@+id/textView1"
-        android:layout_width="0dip"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="0dip"
         android:layout_weight="1"
         android:padding="@dimen/activity_horizontal_margin"
         android:text="Demo"
         android:textStyle="bold"
+        android:textSize="18dp"
         android:textColor="@color/colorPrimary" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="0dip"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="0dip"
         android:layout_weight="1"
         android:padding="@dimen/activity_horizontal_margin"
         android:text="Demo"
